# server/src/common/dto.go
@@ -1,0 +1,5 @@
+package common
+
+type ErrorResponseDto struct{
+	Error string `json:"error"`
+}
