# server/src/routes.go
@@ -3,6 +3,7 @@ package src
 import (
 	"github.com/aayushjoshi2709/mypic/src/comment"
 	"github.com/aayushjoshi2709/mypic/src/image"
+	"github.com/aayushjoshi2709/mypic/src/presign"
 	"github.com/aayushjoshi2709/mypic/src/user"
 	"github.com/gin-gonic/gin"
 )
@@ -18,4 +19,7 @@ func SetUpRoutes(engine *gin.Engine) {
 
 	commentHandler := GetHandler[comment.Handler]("comment_handler")
 	comment.Routes(apiGroup.Group("/v1/comment"), commentHandler)
+
+	presignHandler := GetHandler[presign.Handler]("presign_handler")
+	presign.Routes(apiGroup.Group("/v1/presign"), presignHandler)
 }
